src/objects/Specialty_Crosswalk__c.object
<CustomObject>
    <description>Used for Plan Benefits provider specialty crosswalk</description>
    <fields>
        <fullName>Benefit_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Benefit Code</label>
        <length>800</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Category_Code__c</fullName>
        <label>Category Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ambulatory</fullName>
                </value>
                <value>
                    <fullName>Counselor</fullName>
                </value>
                <value>
                    <fullName>Durable Medical Equipment</fullName>
                </value>
                <value>
                    <fullName>Family Medicine</fullName>
                </value>
                <value>
                    <fullName>Family Therapy</fullName>
                </value>
                <value>
                    <fullName>Gastroenterology</fullName>
                </value>
                <value>
                    <fullName>General Practice</fullName>
                </value>
                <value>
                    <fullName>Home Health</fullName>
                </value>
                <value>
                    <fullName>Hospital</fullName>
                </value>
                <value>
                    <fullName>Internal Medicine</fullName>
                </value>
                <value>
                    <fullName>Midwife</fullName>
                </value>
                <value>
                    <fullName>Obgyn</fullName>
                </value>
                <value>
                    <fullName>Occupational Therapy</fullName>
                </value>
                <value>
                    <fullName>Orthopaedic</fullName>
                </value>
                <value>
                    <fullName>Pediatrics</fullName>
                </value>
                <value>
                    <fullName>Physical Medicine/Rehab</fullName>
                </value>
                <value>
                    <fullName>Physical Therapy</fullName>
                </value>
                <value>
                    <fullName>Psychiatric</fullName>
                </value>
                <value>
                    <fullName>Psychiatry</fullName>
                </value>
                <value>
                    <fullName>Psychology</fullName>
                </value>
                <value>
                    <fullName>Radiology</fullName>
                </value>
                <value>
                    <fullName>Rehabilitation (PT/OT/ST)</fullName>
                </value>
                <value>
                    <fullName>Skilled Nursing</fullName>
                </value>
                <value>
                    <fullName>Social Worker</fullName>
                </value>
                <value>
                    <fullName>Spine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Clinic/Center</fullName>
                </value>
                <value>
                    <fullName>Counselor</fullName>
                </value>
                <value>
                    <fullName>Durable Medical Equipment and Medical Supplies</fullName>
                    <label>Durable Medical Equipment &amp; Medical Supplies</label>
                </value>
                <value>
                    <fullName>Family Medicine</fullName>
                </value>
                <value>
                    <fullName>General Acute Care Hospital</fullName>
                </value>
                <value>
                    <fullName>General Practice</fullName>
                </value>
                <value>
                    <fullName>Home Health</fullName>
                </value>
                <value>
                    <fullName>Internal Medicine</fullName>
                </value>
                <value>
                    <fullName>Marriage and Family Therapist</fullName>
                    <label>Marriage &amp; Family Therapist</label>
                </value>
                <value>
                    <fullName>Midwife</fullName>
                </value>
                <value>
                    <fullName>Obstetrics and Gynecology</fullName>
                    <label>Obstetrics &amp; Gynecology</label>
                </value>
                <value>
                    <fullName>Occupational Therapist</fullName>
                </value>
                <value>
                    <fullName>Orthopaedic Surgery</fullName>
                </value>
                <value>
                    <fullName>Pediatrics</fullName>
                </value>
                <value>
                    <fullName>Physical Medicine and Rehabilitation</fullName>
                    <label>Physical Medicine &amp; Rehabilitation</label>
                </value>
                <value>
                    <fullName>Physical Therapist</fullName>
                </value>
                <value>
                    <fullName>Psychiatric Hospital</fullName>
                </value>
                <value>
                    <fullName>Psychiatry and Neurology</fullName>
                    <label>Psychiatry &amp; Neurology</label>
                </value>
                <value>
                    <fullName>Psychologist</fullName>
                </value>
                <value>
                    <fullName>Rehabilitation Hospital</fullName>
                </value>
                <value>
                    <fullName>Skilled Nursing Facility</fullName>
                </value>
                <value>
                    <fullName>Social Worker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Situs_State__c</fullName>
        <label>Situs State</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>NY/NJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SpecialtyCrosswalkExternalID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SpecialtyCrosswalkExternalID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Specialty__c</fullName>
        <label>Specialty</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ambulatory Surgical</fullName>
                </value>
                <value>
                    <fullName>Gastroenterology</fullName>
                </value>
                <value>
                    <fullName>Mental Health</fullName>
                </value>
                <value>
                    <fullName>Orthopaedic Surgery of the Spine</fullName>
                </value>
                <value>
                    <fullName>Psychiatry</fullName>
                </value>
                <value>
                    <fullName>Radiology</fullName>
                </value>
                <value>
                    <fullName>Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Specialty Crosswalk</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Category_Code__c</columns>
        <columns>Situs_State__c</columns>
        <columns>Classification__c</columns>
        <columns>Specialty__c</columns>
        <columns>Benefit_Code__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SC-{000000000}</displayFormat>
        <label>Specialty Crosswalk Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Specialty Crosswalks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>